--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <li>Fügen Sie Highlights und Punkte zum Besprechen hinzu.</li>
                         <li>Laden Sie Fotos hoch (unterstützt Kamera und Dateiauswahl).</li>
                         <li>Erweitern Sie Kategorien durch Klicken auf den Header (+ wird zu ×).</li>
-                        <li>In jeder Unterkategorie: Wählen Sie eine Bewertung (0-4), fügen Sie Tags hinzu
+                        <li>In jeder Unterkategorie: Wählen Sie eine Bewertung, fügen Sie Tags hinzu
                             (vorgefertigte oder eigene) und schreiben Sie Notizen.</li>
                     </ul>
                     <h3>Sessions verwalten</h3>
@@ -101,8 +101,7 @@
                         <li><strong>Auswertung:</strong> Wechseln Sie zum Tab "Auswertung" für Statistiken, Details und
                             Druckansicht (nur Auswertung wird gedruckt).</li>
                     </ul>
-                    <p>Für Fragen oder Probleme: Dieses Tool basiert auf dem K+5-Modell für guten Unterricht in der
-                        digitalen Welt.</p>
+
                 </div>
             </div>
         </div>
@@ -233,7 +232,7 @@
 
                 <!-- Statistiken -->
                 <div class="stats mb-8">
-                    <h3 class="text-xl font-bold mb-4">Durchschnittsbeobachtungen K+5 (in %)</h3>
+                    <h3 class="text-xl font-bold mb-4">Durchschnittsbeobachtungen (in %)</h3>
                     <div id="stats-container"></div>
                 </div>
 
