--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1 class="text-3xl font-bold text-gray-800 mb-2">Hospitationsbogen mit K+5</h1>
+            <h1 class="text-3xl font-bold text-gray-800 mb-2">Hospitationsbogen</h1>
                 <div class="section">
                 <h2 class="text-xl font-bold mb-4">Sessions verwalten</h2>
                 <div class="session-mgmt">
