--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="session-mgmt">
                     <select id="session-select">
                         <option value="">Session auswählen...</option>
-                    </select>
+                    </select><br>
                     <button id="new-session">
                         <span class="icon">➕</span>
                         Neue Hospitation
