--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             <h1 class="text-3xl font-bold text-gray-800 mb-2">Hospitationsbogen</h1>
                 <div class="section">
                 <h2 class="text-xl font-bold mb-4">Sessions verwalten</h2>
-                <div class="session-mgmt">
-                    <select id="session-select">
+                        <div class="session-mgmt">
+
+                        <select id="session-select">
                         <option value="">Session auswählen...</option>
-                    </select><br>
+                    </select>
+
                     <button id="new-session">
                         <span class="icon">➕</span>
                         Neue Hospitation
